[package]
name = "ycore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.8"
bitflags = "1.3"
xmas-elf = "0.8"
riscv-decode = "0.2"
anyhow = { version = "1.0", default-features = false }

[features]
default = ["qemu"]
debug_test = []
qemu = []

[profile.dev.package."*"]
opt-level = 3
