[package]
name = "y_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
# lazy_static = { version = "1.4", features = ["spin_no_std"] }
buddy_system_allocator = "0.9"
bitflags = "1.3"
xmas-elf = "0.9.0"
# riscv-decode = "0.2"
anyhow = { version = "1.0", default-features = false }
virtio-drivers = { path = "../virtio-drivers" }
easy-fs = { path = "../easy-fs" }
riscv = { path = "../rcore-riscv", features = ["inline-asm"] }
# riscv = { path = "../riscv" }
sbi-rt = "0.0.2"
spin = "0.9"
dtb-walker = { path = "../dtb-walker" }
# fatfs = { path = "../rust-fatfs", default-features = false, features = ["alloc"]}
# fscommon ={ path = "../rust-fscommon", default-features = false }
os-tools = { path = "../os-tools" }
[features]
default = ["qemu"]
debug_test = []
qemu = []

# [profile.release]
# opt-level = 0

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3