[package]
name = "ycore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
# lazy_static = { version = "1.4", features = ["spin_no_std"] }
buddy_system_allocator = "0.11"
bitflags = "2.6"
xmas-elf = "0.9"
# riscv-decode = "0.2"
anyhow = { version = "1.0", default-features = false }
virtio-drivers = "0.7.5"
easy-fs = { path = "../easy-fs" }
# riscv = "0.12"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# riscv = { path = "../riscv" }
sbi-rt = "0.0.3"
spin = "0.9"
dtb-walker = { path = "../dtb-walker" }
# fatfs = { path = "../rust-fatfs", default-features = false, features = ["alloc"]}
# fscommon ={ path = "../rust-fscommon", default-features = false }
os-tools = { path = "../os-tools" }

[features]
default = ["qemu", "debug"]
debug = []
qemu = []

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

[[bin]]
name = "ycore"
path = "src/main.rs"
# test = false
doctest = false
bench = false